[package]
name = "lrc"
version = "0.1.7"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
repository = "https://github.com/magiclen/lrc"
homepage = "https://magiclen.org/lrc"
keywords = ["lrc", "lyrics", "karaoke", "synced"]
categories = ["value-formatting", "parser-implementations"]
description = "A pure Rust implementation of LyRiCs which is a computer file format that synchronizes song lyrics with an audio file."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
regex = "1.3.6"
lazy_static = "1.4.0"
unicase = "2.6.0"

[dependencies.educe]
version = ">=0.4.2"
features = ["Default"]
default-features = false